[gd_scene load_steps=15 format=3 uid="uid://d2ofwgh5fjhx8"]

[ext_resource type="Texture2D" uid="uid://q83ld42xw6bm" path="res://sprites/Background.png" id="1"]
[ext_resource type="Texture2D" uid="uid://tpa8i4nb3aeh" path="res://sprites/Player-Idle.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bga2mtaa5rp8y" path="res://sprites/Dialogue-Background.png" id="3"]
[ext_resource type="Script" path="res://scripts/stevepixelface_dialog_system.gd" id="5"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://cmnu2ojjsm71j" path="res://sprites/Player-Move.png" id="7"]
[ext_resource type="FontFile" uid="uid://dayvqh5byxufm" path="res://fonts/EquipmentPro.ttf" id="7_211pb"]

[sub_resource type="SpriteFrames" id="3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7")
}, {
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": true,
"name": &"walk",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(3, 7)

[sub_resource type="RectangleShape2D" id="8"]
size = Vector2(4, 3)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(1.5, 20.5)

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(15, 3)

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(19, 3)

[sub_resource type="RectangleShape2D" id="7"]
size = Vector2(15, 3)

[node name="stevepixelface_dialog_system" type="Node2D"]
script = ExtResource("5")
metadata/_edit_horizontal_guides_ = [6.0, 3.0]

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(14.5, 14.5)

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(-16, 7)
script = ExtResource("6")

[node name="AnimSprite" type="AnimatedSprite2D" parent="Player"]
texture_filter = 1
sprite_frames = SubResource("3")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, 1)
shape = SubResource("1")

[node name="Area2D" type="Area2D" parent="Player"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
position = Vector2(0, -2.5)
shape = SubResource("8")

[node name="WorldBarrier" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBarrier"]
position = Vector2(-41, -1)
shape = SubResource("2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WorldBarrier"]
position = Vector2(41, 0)
shape = SubResource("2")

[node name="InteractZones" type="Node2D" parent="."]

[node name="Bookcase" type="Area2D" parent="InteractZones"]
position = Vector2(31, 5)
collision_layer = 2
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractZones/Bookcase"]
position = Vector2(0.5, -0.5)
shape = SubResource("5")

[node name="Pictures" type="Area2D" parent="InteractZones"]
collision_layer = 2
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractZones/Pictures"]
position = Vector2(0.5, 4.5)
shape = SubResource("6")

[node name="Door" type="Area2D" parent="InteractZones"]
position = Vector2(-29, 1)
collision_layer = 2
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractZones/Door"]
position = Vector2(-2.5, 3.5)
shape = SubResource("7")

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -40.0
offset_top = -21.0
offset_right = 40.0
offset_bottom = 21.0

[node name="TextureRect" type="TextureRect" parent="GUI"]
visible = false
texture_filter = 1
layout_mode = 0
anchor_right = 1.0
offset_left = 20.0
offset_top = 2.0
offset_right = 20.0
offset_bottom = 32.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("3")

[node name="Label" type="Label" parent="GUI/TextureRect"]
layout_mode = 0
offset_left = 4.0
offset_top = 2.0
offset_right = 148.0
offset_bottom = 54.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.0784314, 0.0627451, 0.0745098, 1)
theme_override_fonts/font = ExtResource("7_211pb")
text = "Bla"
autowrap_mode = 3

[node name="Label_PressSpace" type="Label" parent="GUI"]
unique_name_in_owner = true
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -19.0
offset_top = -4.0
offset_right = 126.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.25, 0.25)
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_fonts/font = ExtResource("7_211pb")
text = "Press Space To Interact"
horizontal_alignment = 1

[connection signal="area_entered" from="Player/Area2D" to="." method="_on_player_area_entered"]
[connection signal="area_exited" from="Player/Area2D" to="." method="_on_player_area_exited"]
